fix gallery page image overflow

--- a/client/src/components/GalleryComponents/GalleryTemplate.module.css
+++ b/client/src/components/GalleryComponents/GalleryTemplate.module.css
@@ -87,12 +87,15 @@
   width: 100%;
   height: 100%;
 }
+.gallery_img div {
+  overflow: hidden;
+}
 .gallery_content .image {
   position: absolute;
   left: 50%;
   top: 50%;
-  max-width: 65vw;
-  max-height: 65vh;
+  width: 65%;
+  height: 65%;
   object-fit: cover;
   border-radius: 15px;
   opacity: 0;
@@ -104,20 +107,20 @@
   cursor: pointer;
 }
 
-.gallery_content .image_active {
+.gallery_img div .image_active {
   filter: none;
   opacity: 1;
   transform: translate(-50%, -50%) scale(1);
   z-index: 4;
 }
-.gallery_content .image_top {
+.gallery_img div .image_top {
   opacity: 0.5;
-  transform: translate(-80%, -90%) scale(0.8);
+  transform: translate(-90%, -90%) scale(0.7);
   z-index: 2;
 }
-.gallery_content .image_bottom {
+.gallery_img div .image_bottom {
   opacity: 0.5;
-  transform: translate(-20%, -10%) scale(0.8);
+  transform: translate(-10%, -10%) scale(0.7);
   z-index: 2;
 }
 .gallery_content .expand_container {
@@ -162,10 +165,10 @@
     justify-content: space-between;
     gap: 1rem;
   }
-  .gallery_content .image {
-    max-width: 40vw;
-    max-height: 40vh;
-  }
+  /* .gallery_content .image {
+    width: 40%;
+    height: 40%;
+  } */
 
   .gallery_container .image_active {
     transform: translate(-50%, -50%) scale(1);
@@ -187,8 +190,8 @@
     justify-content: space-between;
     gap: 1rem;
   }
-  .gallery_content .image {
+  /* .gallery_content .image {
     max-width: 45vw;
     max-height: 45vh;
-  }
+  } */
 }
